--- a/src/00_TreeClusters.ipynb
+++ b/src/00_TreeClusters.ipynb
@@ -45,6 +45,8 @@
     "import shapely\n",
     "import pandas as pd\n",
     "import re\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
     "from shapely.geometry import LineString\n",
     "from shapely.ops import polygonize, cascaded_union\n",
     "from shapely.geometry import box\n",
@@ -1716,6 +1718,16 @@
     "                        axs,\n",
     "                        **kwargs\n",
     "                        ):\n",
+    "        \"\"\"\n",
+    "        Visualize a specific level\n",
+    "        \n",
+    "        :param axe matplolib  axs: where thte plot will be draw\n",
+    "        \n",
+    "        :param list int levels: list of levels to  visualizelevel \n",
+    "        \n",
+    "        :returns None:\n",
+    "        \n",
+    "        \"\"\"\n",
     "        levels_vis = kwargs.get('levels', [0]),\n",
     "        # print(levels_vis)\n",
     "        color_map_val= kwargs.get('color_map_val', 'jet')\n",
