--- a/src/01_Clustering.ipynb
+++ b/src/01_Clustering.ipynb
@@ -1091,7 +1091,7 @@
     "                                              algorithm = 'optics')\n",
     "    tree_knee = recursive_clustering_tree(dic_points_ori,\n",
     "                                               levels_clustering = levels_cluster,\n",
-    "                                              algorithm = 'auto_knee_average')\n",
+    "                                              algorithm = 'adaptive_DBSCAN')\n",
     "    if verbose:\n",
     "        print('DONE clusterize and creating the trees')\n",
     "    ######  get the points dataframe for each tree \n",
@@ -1114,7 +1114,7 @@
     "        print('DBSCAN size',df_DBSCAN.shape)\n",
     "        print('HDBSCAN size',df_HDBSCAN.shape)\n",
     "        print('OPTICS size',df_OPTICS.shape)\n",
-    "        print('KNEE size',df_knee.shape)\n",
+    "        print('adaptive_DBSCAN size',df_knee.shape)\n",
     "    \n",
     "    ######For each dataframe  \n",
     "    if verbose:\n",
@@ -1185,7 +1185,7 @@
     "                        dic_lev)\n",
     "    ##### Knee\n",
     "    if verbose:\n",
-    "        print('get dataframe Knee')\n",
+    "        print('get adaptive DBSCAN')\n",
     "        \n",
     "    dic_final_levels_knee = get_dics_labels(tree_original, tree_knee, levels_cluster)\n",
     "    dic_label_final_levels_knee=[ {'level_ori':dic['level_ori'], 'dict':mod_cid_label(dic['dict']) } for dic in  dic_final_levels_knee]\n",
@@ -1210,7 +1210,7 @@
     "    df_DBSCAN_sig_noise.name= 'I_DBSCAN'\n",
     "    df_HDBSCAN_sig_noise.name= 'I_HDBSCAN'\n",
     "    df_OPTICS_sig_noise.name= 'I_OPTICS'\n",
-    "    df_knee_sig_noise.name = 'I_knee'\n",
+    "    df_knee_sig_noise.name = 'I_Ada_DBSCAN'\n",
     "    \n",
     "    \n",
     "    \n",
@@ -1409,7 +1409,7 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "def SMF(list_poly_c_1,list_poly_c_2 ,**kwargs):\n",
+    "def SSM(list_poly_c_1,list_poly_c_2 ,**kwargs):\n",
     "    \"\"\"\n",
     "    The function calculates the Similarity Form Measurment (SMF)\n",
     "    between two clusterizations \n",
@@ -1486,9 +1486,9 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"SMF\" class=\"doc_header\"><code>SMF</code><a href=\"__main__.py#L2\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"SSM\" class=\"doc_header\"><code>SSM</code><a href=\"__main__.py#L2\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
-       "> <code>SMF</code>(**`list_poly_c_1`**, **`list_poly_c_2`**, **\\*\\*`kwargs`**)\n",
+       "> <code>SSM</code>(**`list_poly_c_1`**, **`list_poly_c_2`**, **\\*\\*`kwargs`**)\n",
        "\n",
        "The function calculates the Similarity Form Measurment (SMF)\n",
        "between two clusterizations \n",
@@ -1510,7 +1510,7 @@
     }
    ],
    "source": [
-    "show_doc(SMF)"
+    "show_doc(SSM)"
    ]
   },
   {
