--- a/src/00_TreeClusters.ipynb
+++ b/src/00_TreeClusters.ipynb
@@ -13,9 +13,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tree of clusters \n",
-    "\n",
-    "Basic classes to generate a tree clusters structure allowing us to \n"
+    "# Cluster Tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Basic classes to generate a clusters tree structure make a Hierarchical Geo Clustering analisys. "
    ]
   },
   {
@@ -2078,7 +2083,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"TreeClusters.get_deepth\" class=\"doc_header\"><code>TreeClusters.get_deepth</code><a href=\"__main__.py#L248\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.get_deepth\" class=\"doc_header\"><code>TreeClusters.get_deepth</code><a href=\"__main__.py#L258\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>TreeClusters.get_deepth</code>()\n",
        "\n",
@@ -2104,7 +2109,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"TreeClusters.size\" class=\"doc_header\"><code>TreeClusters.size</code><a href=\"__main__.py#L256\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.size\" class=\"doc_header\"><code>TreeClusters.size</code><a href=\"__main__.py#L266\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>TreeClusters.size</code>()\n",
        "\n",
@@ -2235,7 +2240,14 @@
        "<h4 id=\"TreeClusters.visualize_levels\" class=\"doc_header\"><code>TreeClusters.visualize_levels</code><a href=\"__main__.py#L193\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>TreeClusters.visualize_levels</code>(**`axs`**, **\\*\\*`kwargs`**)\n",
-       "\n"
+       "\n",
+       "Visualize a specific level\n",
+       "\n",
+       ":param axe matplolib  axs: where thte plot will be draw\n",
+       "\n",
+       ":param list int levels: list of levels to  visualizelevel \n",
+       "\n",
+       ":returns None:"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
