--- a/src/01_Clustering.ipynb
+++ b/src/01_Clustering.ipynb
@@ -145,10 +145,10 @@
     "                        noise_points = tmp[1]\n",
     "                        tmp =  tmp[0]\n",
     "                ##########  \n",
-    "                elif algorithm == 'adaptive_DBSCAN':\n",
+    "                elif algorithm == 'adaptative_DBSCAN':\n",
     "                    #### If the number of cluster is too small \n",
     "                    \n",
-    "                    tmp = adaptive_DBSCAN(cluster, **kwargs)\n",
+    "                    tmp = adaptative_DBSCAN(cluster, **kwargs)\n",
     "                    if ret_noise:\n",
     "                        noise_points = tmp[1]\n",
     "                        tmp =  tmp[0]\n",
@@ -554,7 +554,7 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "def adaptive_DBSCAN(points2_clusters ,\n",
+    "def adaptative_DBSCAN(points2_clusters ,\n",
     "                **kwargs):\n",
     "    \"\"\"\n",
     "    The function use the knee and average to obtain a good value for epsilon and use \n",
@@ -643,7 +643,7 @@
     "    #### Check if the list is empty\n",
     "    if len(lits_appe_all_aver) ==0:\n",
     "        if debugg:\n",
-    "            print('AUTOIMATIC DBSCAN')\n",
+    "            print('DBSCAN')\n",
     "            print('Using 0.6 as epsilon and 20 as Minpoints')\n",
     "        db_scan= DBSCAN(eps=0.6, min_samples=20).fit(points_arr)\n",
     "    else:\n",
@@ -687,9 +687,9 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"adaptive_DBSCAN\" class=\"doc_header\"><code>adaptive_DBSCAN</code><a href=\"__main__.py#L2\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"adaptative_DBSCAN\" class=\"doc_header\"><code>adaptative_DBSCAN</code><a href=\"__main__.py#L2\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
-       "> <code>adaptive_DBSCAN</code>(**`points2_clusters`**, **\\*\\*`kwargs`**)\n",
+       "> <code>adaptative_DBSCAN</code>(**`points2_clusters`**, **\\*\\*`kwargs`**)\n",
        "\n",
        "The function use the knee and average to obtain a good value for epsilon and use \n",
        "DBSCAN to obtain the clusters\n",
@@ -721,7 +721,7 @@
     }
    ],
    "source": [
-    "show_doc(adaptive_DBSCAN)"
+    "show_doc(adaptative_DBSCAN)"
    ]
   },
   {
@@ -1091,7 +1091,7 @@
     "                                              algorithm = 'optics')\n",
     "    tree_knee = recursive_clustering_tree(dic_points_ori,\n",
     "                                               levels_clustering = levels_cluster,\n",
-    "                                              algorithm = 'adaptive_DBSCAN')\n",
+    "                                              algorithm = 'adaptative_DBSCAN')\n",
     "    if verbose:\n",
     "        print('DONE clusterize and creating the trees')\n",
     "    ######  get the points dataframe for each tree \n",
@@ -1114,7 +1114,7 @@
     "        print('DBSCAN size',df_DBSCAN.shape)\n",
     "        print('HDBSCAN size',df_HDBSCAN.shape)\n",
     "        print('OPTICS size',df_OPTICS.shape)\n",
-    "        print('adaptive_DBSCAN size',df_knee.shape)\n",
+    "        print('adaptative_DBSCAN size',df_knee.shape)\n",
     "    \n",
     "    ######For each dataframe  \n",
     "    if verbose:\n",
@@ -1185,7 +1185,7 @@
     "                        dic_lev)\n",
     "    ##### Knee\n",
     "    if verbose:\n",
-    "        print('get adaptive DBSCAN')\n",
+    "        print('get adaptative DBSCAN')\n",
     "        \n",
     "    dic_final_levels_knee = get_dics_labels(tree_original, tree_knee, levels_cluster)\n",
     "    dic_label_final_levels_knee=[ {'level_ori':dic['level_ori'], 'dict':mod_cid_label(dic['dict']) } for dic in  dic_final_levels_knee]\n",
