--- a/src/02_tutorial.ipynb
+++ b/src/02_tutorial.ipynb
@@ -554,7 +554,6 @@
    "source": [
     "#hide_output\n",
     "#slow\n",
-    "\n",
     "adaptative_DBSCAN_HGC = recursive_clustering_tree(\n",
     "                    dic_points,\n",
     "                    levels_clustering = 4,\n",
@@ -599,7 +598,12 @@
    "id": "a46848db-4a2c-429b-9735-a1da79dff33c",
    "metadata": {},
    "source": [
-    "The evaluation using a "
+    "To evaluate the clusterizations on a specific level $i$ using the $SSM$, the need for the shape of all the polygons on the level $i$ is needed. Therefore the evaluation is made using the nodes in the `TreeClusters` objects for the specific level to evaluate on the clusterizations to evaluate. \n",
+    "\n",
+    "$$\n",
+    "SSM(\\mathcal{P}_i^O , \\mathcal{Q}_i^{C}) =\\frac{\\sum\\limits_{P_{l}^O\\in \\mathcal{P}_i^O  Q_{k}^C \\in{Q}_i^{C} } | P_{l}^O\\cap Q_{k}^C |* Jacc(P_{l}^O,Q_{k}^C)} {\\sum\\limits_{P \\in \\mathcal{P}_i^O} |P|  \n",
+    "+  \\sum\\limits_{Q \\in \\mathcal{Q}_{not}} |Q|} \n",
+    "$$"
    ]
   },
   {
@@ -673,13 +677,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ca6aba55-31dc-4ce5-9949-fbc578cfdb01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5420769847262458"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "level=3\n",
+    "SSM(HGC.levels_nodes[level],\n",
+    "    adaptative_DBSCAN_HGC.levels_nodes[level]\n",
+    "   )"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "767509ca-7e20-442e-8b5c-72550418b5a5",
    "metadata": {},
    "source": [
     "### Obtain the tags\n",
     "\n",
-    "To obtain the specific tag for each point and insert into a dataframe the `get_dataframe_recursive_node_label` method is available. \n"
+    "If the specific label for each point is needed for some other purpose, the `get_dataframe_recursive_node_label` method is available. The method obtains the tag for all the points and puts them into a dataframe.\n"
    ]
   },
   {
