Add random clustering

--- a/src/01_Clustering.ipynb
+++ b/src/01_Clustering.ipynb
@@ -39,6 +39,7 @@
     "import kneed\n",
     "import itertools\n",
     "import shapely\n",
+    "import random\n",
     "from CGAL.CGAL_Alpha_shape_2 import *\n",
     "from CGAL.CGAL_Kernel import Point_2\n",
     "from sklearn.cluster import DBSCAN, OPTICS\n",
