--- a/src/index.ipynb
+++ b/src/index.ipynb
@@ -46,7 +46,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install your_project_name`"
+    "To install the library can be simply:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`pip install git+https://github.com/CentroGeo/HierarchicalGeoClustering.git`"
    ]
   },
   {
