Aggregate all helper functions to run "generate_tree_clusterize_form"

--- a/src/index.ipynb
+++ b/src/index.ipynb
@@ -46,6 +46,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The library uses the cgal library, if the library is use inside a conda enviroment the installation procedure should create the enviroment and install the cgal library using ` conda install -c conda-forge cgal`. \n",
+    "\n",
+    "\n",
     "To install the library can be simply:"
    ]
   },
