--- a/src/00_TreeClusters.ipynb
+++ b/src/00_TreeClusters.ipynb
@@ -50,6 +50,7 @@
     "import shapely\n",
     "import pandas as pd\n",
     "import re\n",
+    "import math\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "from shapely.geometry import LineString\n",
