Try to fix alpha shape problem

--- a/src/01_Clustering.ipynb
+++ b/src/01_Clustering.ipynb
@@ -534,7 +534,7 @@
     "    ):\n",
     "    \"\"\"Function to get the clusters for single group by\n",
     "    \n",
-    "    :param t_next_level_2 Dictionary with the points to compute the\n",
+    "    :param t_next_level_2: Dictionary with the points to compute the\n",
     "            cluster\n",
     "    :param level:  None Level to compute (Default None)\n",
     "    \n",
@@ -1548,53 +1548,55 @@
    "source": [
     "#export\n",
     "def get_tree_from_clustering(cluster_tree_clusters):\n",
-    "     \"\"\" Returns the tree from the iterative clustering, the cluster_tree_cluster\n",
+    "    \"\"\" Returns the tree from the iterative clustering, the cluster_tree_cluster\n",
     "     \n",
     "     :param cluster_tree_clusters is a list of list with a dictionary that \n",
-    "            should contain the point of the next level clusters, the name of the parent\n",
+    "            should contain the points of the next level clusters, the name of the parent\n",
     "            cluster of such clusters (name of the current node), and the point that \n",
     "            are consider noise. \n",
     "    \n",
     "     :return A list of list that contains the nodes for each level of the tree. \n",
-    "     \"\"\" \n",
+    "    \"\"\" \n",
     "     ##### La estructura de arbol \n",
-    "     all_level_clusters =[]\n",
-    "     previus_level=[]\n",
-    "     list_len = len(cluster_tree_clusters)-1\n",
-    "     for level_num_clus, level_cluster in enumerate(cluster_tree_clusters):\n",
-    "          level_nodes=[]\n",
-    "          for cluster_te in level_cluster:\n",
-    "               node_l = NodeCluster(name= cluster_te['parent'])\n",
-    "               to_concat= [point_arr for point_arr in cluster_te['points']]\n",
-    "               if len(to_concat)>0: \n",
-    "                    points_poly = np.concatenate(to_concat)\n",
-    "               else:\n",
-    "                    points_poly = np.array([], dtype= np.float64).reshape(0,2)\n",
+    "    all_level_clusters =[]\n",
+    "    previus_level=[]\n",
+    "    list_len = len(cluster_tree_clusters)-1\n",
+    "    for level_num_clus, level_cluster in enumerate(cluster_tree_clusters):\n",
+    "        level_nodes=[]\n",
+    "        for cluster_te in level_cluster:\n",
+    "            node_l = NodeCluster(name= cluster_te['parent'])\n",
+    "            to_concat= [point_arr for point_arr in cluster_te['points']]\n",
+    "            if len(to_concat)>0:\n",
+    "                points_poly = np.concatenate(to_concat)\n",
+    "            else:\n",
+    "                points_poly = np.array([], dtype= np.float64).reshape(0,2)\n",
     "               \n",
-    "               points_poly = np.concatenate(\n",
+    "            points_poly = np.concatenate(\n",
     "                                   (points_poly,cluster_te['noise_points']),\n",
     "                                   axis=0\n",
     "                              )\n",
     "               \n",
-    "               node_l.polygon_cluster =  get_alpha_shape(points_poly)\n",
-    "               ##### Es necesario que si es el último nivel todos los puntoas sean\n",
-    "               ## considerados como ruido pues aunque se haya hecho la clusterizacion\n",
-    "               #  ya no se bajo al siguiente nivel\n",
-    "               ## \n",
-    "               if level_num_clus==list_len:\n",
-    "                    node_l.point_cluster_noise = shapely.geometry.MultiPoint(points_poly) \n",
-    "               else:\n",
-    "                    node_l.point_cluster_noise = shapely.geometry.MultiPoint(cluster_te['noise_points']) \n",
-    "               pos=node_l.name.rfind('_L')\n",
-    "               if node_l.name[:pos]=='':\n",
-    "                    node_l.parent = None\n",
-    "               else:\n",
-    "                    lis_pa=[item  for item in previus_level if item.name == node_l.name[:pos]]\n",
-    "                    node_l.parent= lis_pa[0]\n",
-    "               level_nodes.append(node_l)\n",
-    "          all_level_clusters.append(level_nodes)\n",
-    "          previus_level = level_nodes\n",
-    "     return  all_level_clusters"
+    "            node_l.polygon_cluster =  get_alpha_shape(points_poly)\n",
+    "            ##### Es necesario que si es el último nivel todos los puntos sean\n",
+    "            ## considerados como ruido pues aunque se haya hecho la clusterizacion\n",
+    "            #  ya no se bajo al siguiente nivel\n",
+    "            ## \n",
+    "            if level_num_clus==list_len:\n",
+    "                node_l.point_cluster_noise = shapely.geometry.MultiPoint(points_poly) \n",
+    "            else:\n",
+    "                node_l.point_cluster_noise = shapely.geometry.MultiPoint(cluster_te['noise_points']) \n",
+    "            \n",
+    "            pos=node_l.name.rfind('_L')\n",
+    "            if node_l.name[:pos]=='':\n",
+    "                node_l.parent = None\n",
+    "            else:\n",
+    "                lis_pa=[item  for item in previus_level if item.name == node_l.name[:pos]]\n",
+    "                node_l.parent= lis_pa[0]\n",
+    "            level_nodes.append(node_l)\n",
+    "        all_level_clusters.append(level_nodes)\n",
+    "        previus_level = level_nodes\n",
+    "    \n",
+    "    return  all_level_clusters"
    ]
   },
   {
