--- a/src/00_TreeClusters.ipynb
+++ b/src/00_TreeClusters.ipynb
@@ -1301,7 +1301,7 @@
    "metadata": {},
    "source": [
     "#### Get values \n",
-    "Exctract values from the `NodeCluster` class"
+    "Extract values from the `NodeCluster` class"
    ]
   },
   {
