--- a/src/01_Clustering.ipynb
+++ b/src/01_Clustering.ipynb
@@ -1650,7 +1650,7 @@
     "    print('Random to use: ',random_seed )\n",
     "    print('With',levels_tree , ' levels' )\n",
     "    tree_original= TreeClusters(levels_tree, random_seed= random_seed)\n",
-    "    tree_original.populate_tree(number_per_cluster=per_cluster, avoid_intersec= True)\n",
+    "    tree_original.populate_tree(number_per_cluster=per_cluster, **kwargs)\n",
     "    tree_original_points= tree_original.get_points_tree()\n",
     "    X_2=np.array([[p.x,p.y] for p in tree_original_points])\n",
     "    dic_points_ori={'points':[X_2], 'parent':''}\n",
