Add link to documentation

--- a/src/index.ipynb
+++ b/src/index.ipynb
@@ -411,6 +411,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A detail [documentation](https://centrogeo.github.io/HierarchicalGeoClustering/) is available "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
