Add line to see the documentation

--- a/src/index.ipynb
+++ b/src/index.ipynb
@@ -33,11 +33,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Install"
    ]
@@ -408,6 +403,13 @@
    ],
    "source": [
     "df_metric_form"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For more detail please see the tutorial available on the documentation inside the [githubpages](https://centrogeo.github.io/HierarchicalGeoClustering/) of this repository."
    ]
   },
   {
