Fix AMOIEBA in cluster and fix the test

--- a/src/_AMEBA.ipynb
+++ b/src/_AMEBA.ipynb
@@ -1619,9 +1619,9 @@
     "    \n",
     "    #### Probably not needed or can be reduce\n",
     "    #### The edge tolerance\n",
-    "    for i in all_remove_flat:\n",
+    "    for i in all_remove_level_flat:\n",
     "        gr.edge_properties['level_n_tolerance'][i]= False\n",
-    "    for i in all_keep_flat:\n",
+    "    for i in all_keep_level_flat:\n",
     "        gr.edge_properties['level_n_tolerance'][i]= True\n",
     "        \n",
     "    gr.set_edge_filter(prop =  gr.edge_properties['level_n_tolerance'])\n",
