--- a/src/_AMOEBA_GRAPH.ipynb
+++ b/src/_AMOEBA_GRAPH.ipynb
@@ -157,8 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "ccc3d11c-1e3d-4f08-82ac-8e507e25a7e1",
+   "execution_count": 39,
+   "id": "7e62917a-15ab-4be4-8fce-e31e36fe28a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,10 +213,13 @@
     "    \n",
     "    #### Probably not needed or can be reduce\n",
     "    #### The edge tolerance\n",
-    "    for i in all_remove_flat:\n",
+    "    for i in all_remove_level_flat:\n",
+    "        # print(i)\n",
     "        gr.edge_properties['level_n_tolerance'][i]= False\n",
-    "    for i in all_keep_flat:\n",
-    "        gr.edge_properties['level_n_tolerance'][i]= True\n",
+    "    # print(all_keep_level_flat)\n",
+    "    for i_k in all_keep_level_flat:\n",
+    "        # print(i_k)\n",
+    "        gr.edge_properties['level_n_tolerance'][i_k]= True\n",
     "        \n",
     "    gr.set_edge_filter(prop =  gr.edge_properties['level_n_tolerance'])\n",
     "    \n",
