Fix problem tree vizualize
If there is no polygon in the cluster allows to display its point and not the cluster polygon

--- a/src/00_TreeClusters.ipynb
+++ b/src/00_TreeClusters.ipynb
@@ -841,7 +841,7 @@
     "            for child in self.children:\n",
     "                 child.viewer_cluster(ax, **kwargs)\n",
     "                \n",
-    "        if polygon_con:\n",
+    "        if polygon_con and self.polygon_cluster != None:\n",
     "            x_polygon, y_polygon  =self.polygon_cluster.exterior.xy\n",
     "            ax.plot(x_polygon, \n",
     "                    y_polygon,\n",
