--- a/src/_test_AMOEBA.ipynb
+++ b/src/_test_AMOEBA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3d6d1aee-fd2b-4278-ba0a-fcd5e22286ad",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "9116969c-cf1f-49db-b231-8430d4937501",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "72d24b4d-eba1-4229-9469-88b447f726d3",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "50281ea7-5229-41e9-95d8-67984673e562",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "47da7119-7bb4-431e-8ee8-8878a1ca5952",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "1380"
       ]
      },
-     "execution_count": 18,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "70fbe186-62ee-4936-b723-e72f0fc5d17e",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "1380"
       ]
      },
-     "execution_count": 19,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "db04c15e-fe5c-4f4b-9295-f2b448f1b3a1",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "354144d9-61ea-4bf4-82a1-c7492ccb4a27",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "35f99316-6694-4a82-b323-b2a43e73b0d5",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "8a9b816d-4b83-4a93-a3cb-ff0ae7c0a5a4",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "e1fb2961-edcf-4fb8-977d-df6351ab1f0b",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "f2cada02-b05f-4ed0-8df0-de8a1f767d41",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "97324469-ce3b-4e50-9d67-8bcf832b2e4e",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "1380"
       ]
      },
-     "execution_count": 25,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "40157cee-36c8-4b9a-ae87-19753019129b",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "d39dab8e-2537-4439-bd49-6716c5fd1e26",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "729168d3-afa0-4e00-8cdf-0acdea42fc75",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "aa7d128d-0ef0-4b85-8adf-514cb6765e79",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
        "        [0.50107735, 0.7761988 ]]))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "ed47c2a8-1f86-4205-aa29-a4b383334e22",
    "metadata": {},
    "outputs": [],
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "218a63f5-8599-4fe8-9dc8-5fc5a23acd6c",
    "metadata": {},
    "outputs": [],
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "50677741-2e82-48df-a1bc-dbfcc5e92c6a",
    "metadata": {},
    "outputs": [
@@ -548,7 +548,7 @@
        "842"
       ]
      },
-     "execution_count": 13,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "4d45d842-e5b7-4c76-919a-36dbc8ad57ef",
    "metadata": {},
    "outputs": [
@@ -569,7 +569,7 @@
        "2"
       ]
      },
-     "execution_count": 14,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "096d1ae6-d0a5-4e08-ad05-3b5d1b3a32e2",
    "metadata": {},
    "outputs": [
@@ -590,7 +590,7 @@
        "34"
       ]
      },
-     "execution_count": 15,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "9199373c-5c03-42d1-bf89-d7f89bf6e045",
    "metadata": {},
    "outputs": [],
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "e2b819c9-8b57-4a00-9a1a-b6ef78770214",
    "metadata": {},
    "outputs": [],
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "ac7869ff-b8dc-4948-9b40-63d33154c412",
    "metadata": {},
    "outputs": [
@@ -782,7 +782,7 @@
        "       [0.48268025, 0.81898772]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "de526f65-01ea-4813-86ba-e1bbea70157f",
    "metadata": {},
    "outputs": [],
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "75241aba-6353-467d-844e-a4a97854b836",
    "metadata": {},
    "outputs": [
@@ -878,7 +878,7 @@
        "                0,  0,  0,  0,  0], dtype=int32)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "57161f2a-1a2f-4485-a9b2-4cbdbf9d999c",
    "metadata": {},
    "outputs": [],
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "958a2adf-b76b-4e27-9238-ddb304f53ad7",
    "metadata": {},
    "outputs": [
@@ -925,7 +925,7 @@
        "       [ True,  True]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "f58d7640-ce11-4b8c-97ea-e25ac31e756a",
    "metadata": {},
    "outputs": [],
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "104582ba-bd75-4aac-bfa6-8e61b3881c84",
    "metadata": {},
    "outputs": [],
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "9460e347-6f95-4c61-966a-d47f5c5ed021",
    "metadata": {},
    "outputs": [],
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "352e29ca-643b-435c-bc05-1ff56274f7c4",
    "metadata": {},
    "outputs": [
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "145a7779-a89a-458f-a979-8a869712b024",
    "metadata": {},
    "outputs": [
@@ -1178,32 +1178,32 @@
      "data": {
       "text/plain": [
        "{('e',\n",
-       "  'dis'): <EdgePropertyMap object with value type 'double', for Graph 0x7f30ff6f3b90, at 0x7f30ff640a10>,\n",
+       "  'dis'): <EdgePropertyMap object with value type 'double', for Graph 0x7f30ff6f3b90,>,\n",
        " ('v',\n",
-       "  'pos'): <VertexPropertyMap object with value type 'vector<double>', for Graph 0x7f30ff6f3b90, at 0x7f30ff640990>,\n",
+       "  'pos'): <VertexPropertyMap object with value type 'vector<double>', for Graph 0x7f30ff6f3b90,>,\n",
        " ('e',\n",
-       "  'l_1_tol'): <EdgePropertyMap object with value type 'bool', for Graph 0x7f30ff6f3b90, at 0x7f30ff571d90>,\n",
+       "  'l_1_tol'): <EdgePropertyMap object with value type 'bool', for Graph 0x7f30ff6f3b90,>,\n",
        " ('v',\n",
-       "  'l_1_tol_r'): <VertexPropertyMap object with value type 'bool', for Graph 0x7f30ff6f3b90, at 0x7f30ff571dd0>,\n",
+       "  'l_1_tol_r'): <VertexPropertyMap object with value type 'bool', for Graph 0x7f30ff6f3b90,>,\n",
        " ('v',\n",
-       "  '_compo_l_1'): <VertexPropertyMap object with value type 'int32_t', for Graph 0x7f30ff6f3b90, at 0x7f30ff59c310>,\n",
+       "  '_compo_l_1'): <VertexPropertyMap object with value type 'int32_t', for Graph 0x7f30ff6f3b90,>,\n",
        " ('v',\n",
-       "  '_compo_l_1_res'): <VertexPropertyMap object with value type 'int32_t', for Graph 0x7f30ff6f3b90, at 0x7f30ff571fd0>,\n",
+       "  '_compo_l_1_res'): <VertexPropertyMap object with value type 'int32_t', for Graph 0x7f30ff6f3b90,>,\n",
        " ('v',\n",
-       "  '_l_1_noise'): <VertexPropertyMap object with value type 'bool', for Graph 0x7f30ff6f3b90, at 0x7f30ff59c210>,\n",
+       "  '_l_1_noise'): <VertexPropertyMap object with value type 'bool', for Graph 0x7f30ff6f3b90,>,\n",
        " ('v',\n",
-       "  '_l_1_clus_0'): <VertexPropertyMap object with value type 'bool', for Graph 0x7f30ff6f3b90, at 0x7f30ff59c910>,\n",
+       "  '_l_1_clus_0'): <VertexPropertyMap object with value type 'bool', for Graph 0x7f30ff6f3b90,>,\n",
        " ('v',\n",
-       "  '_l_1_clus_1'): <VertexPropertyMap object with value type 'bool', for Graph 0x7f30ff6f3b90, at 0x7f30ff59c1d0>,\n",
+       "  '_l_1_clus_1'): <VertexPropertyMap object with value type 'bool', for Graph 0x7f30ff6f3b90,>,\n",
        " ('v',\n",
-       "  '_l_1_clus_2'): <VertexPropertyMap object with value type 'bool', for Graph 0x7f30ff6f3b90, at 0x7f30ff59c890>,\n",
+       "  '_l_1_clus_2'): <VertexPropertyMap object with value type 'bool', for Graph 0x7f30ff6f3b90,>,\n",
        " ('v',\n",
-       "  '_l_1_clus_3'): <VertexPropertyMap object with value type 'bool', for Graph 0x7f30ff6f3b90, at 0x7f30ff59ca50>,\n",
+       "  '_l_1_clus_3'): <VertexPropertyMap object with value type 'bool', for Graph 0x7f30ff6f3b90,>,\n",
        " ('v',\n",
-       "  '_l_1_clus_4'): <VertexPropertyMap object with value type 'bool', for Graph 0x7f30ff6f3b90, at 0x7f30ff59ccd0>}"
+       "  '_l_1_clus_4'): <VertexPropertyMap object with value type 'bool', for Graph 0x7f30ff6f3b90,>}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "69b57558-b1fc-400f-ab7f-9eba3afafe78",
    "metadata": {},
    "outputs": [
@@ -1260,18 +1260,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.12"
   }
  },
  "nbformat": 4,
