--- a/src/00_TreeClusters.ipynb
+++ b/src/00_TreeClusters.ipynb
@@ -72,7 +72,7 @@
     "    \"\"\"\n",
     "    Help function to validate the number of points that are inside the polygon \n",
     "    \n",
-    "    :param list list_points: List of points to concider \n",
+    "    :param list list_points: List of points to consider \n",
     "    \n",
     "    :param shapely.geometry.Polygon poligon_check:   \n",
     "    \n",
@@ -86,9 +86,9 @@
     "    #print(len(inside))\n",
     "    if len(inside) > int(min_percent*len(list_points)):\n",
     "        \n",
-    "        return True , list_points\n",
+    "        return True , inside\n",
     "    else: \n",
-    "        \n",
+    "\n",
     "        return False , inside"
    ]
   },
@@ -96,8 +96,34 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True,\n",
+       " [<shapely.geometry.point.Point>,\n",
+       "  <shapely.geometry.point.Point>,\n",
+       "  <shapely.geometry.point.Point>,\n",
+       "  <shapely.geometry.point.Point>])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| hide \n",
+    "#### test the function\n",
+    "pol_square = shapely.geometry.Polygon(((0., 0.), (0., 1.), (1., 1.), (1., 0.), (0., 0.)))\n",
+    "list_points =[shapely.geometry.Point(0.25, 0.25 ),\n",
+    "              shapely.geometry.Point(0.75, 0.25 ),\n",
+    "              shapely.geometry.Point(0.75,0.75 ),\n",
+    "              shapely.geometry.Point(0.25,0.75 ), \n",
+    "              shapely.geometry.Point(1.25,1.75 ),\n",
+    "             ]\n",
+    "inside_polygon(list_points, pol_square, .75) ### sould return true and 4 element inside the list\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -134,6 +160,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"0.297880553513115 0.055985369984875424 0.5111966830726837 0.6819040744036394\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,0.7938748143733904)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.013638081488072789\" opacity=\"0.6\" d=\"M 0.5092959347682425,0.08124107644426948 L 0.32313625997250905,0.3846871155347965 L 0.6875949541839156,0.7126337379291209 L 0.7838215301264048,0.5063148009498802 L 0.5092959347682425,0.08124107644426948 z\" /></g></svg>"
+      ],
+      "text/plain": [
+       "<shapely.geometry.polygon.Polygon>"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| hide\n",
+    "x = [random.uniform(0, 1) for i in range(10)]\n",
+    "y = [random.uniform(0, 1) for i in range(10)]\n",
+    "poligon_non_convex_from_Points([shapely.geometry.Point(l[0], l[1])  for l in  zip(x,y)] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#| export \n",
@@ -159,6 +211,30 @@
     "        else:\n",
     "            keep_triangles.append(i)\n",
     "    return shapely.ops.cascaded_union(keep_triangles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"0.10534774006661866 -0.02878853101839525 0.9158967333982525 0.9648681637217137\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,0.9072911016849231)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.019297363274434275\" opacity=\"0.6\" d=\"M 0.530489784355576,0.006947326897223771 L 0.5813967049076164,0.40949466289898795 L 0.34798751852413323,0.072204191871583 L 0.3209236153118862,0.41305135651240243 L 0.14108359798223769,0.5672686140125498 L 0.30011534368362747,0.6548019810493769 L 0.2779144897529833,0.6880768568900625 L 0.4858973070772805,0.7158752139319962 L 0.8390029446177968,0.9003437747876993 L 0.8586432494952438,0.7136142885959179 L 0.9403915059261526,0.7290184700520626 L 0.8663075908788231,0.6006470983341746 L 0.9855086155492522,0.2971685952156575 L 0.6913648468578816,0.0818986143102508 L 0.530489784355576,0.006947326897223771 z\" /></g></svg>"
+      ],
+      "text/plain": [
+       "<shapely.geometry.polygon.Polygon>"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| hide\n",
+    "poligon_non_convex_random_gen(20)"
    ]
   },
   {
@@ -1064,6 +1140,34 @@
    "source": [
     "#| hide\n",
     "node.populate_cluster(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#| hide\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n"
    ]
   },
   {
@@ -2628,7 +2732,7 @@
        "\n",
        "Help function to validate the number of points that are inside the polygon \n",
        "\n",
-       ":param list list_points: List of points to concider \n",
+       ":param list list_points: List of points to consider \n",
        "\n",
        ":param shapely.geometry.Polygon poligon_check:   \n",
        "\n",
@@ -2645,7 +2749,7 @@
        "\n",
        "Help function to validate the number of points that are inside the polygon \n",
        "\n",
-       ":param list list_points: List of points to concider \n",
+       ":param list list_points: List of points to consider \n",
        "\n",
        ":param shapely.geometry.Polygon poligon_check:   \n",
        "\n",
@@ -2762,7 +2866,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#| hide\n",
+    "import nbdev; nbdev.nbdev_export()"
+   ]
   }
  ],
  "metadata": {
