--- a/src/01_Clustering.ipynb
+++ b/src/01_Clustering.ipynb
@@ -2823,7 +2823,10 @@
    "id": "c62f3342-26f3-474b-b899-3b47286edf7d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#| hide\n",
+    "import nbdev; nbdev.nbdev_export()"
+   ]
   }
  ],
  "metadata": {
